# nerfstudio-xray-base

./: pyproject.toml
xray_base/: dataparser_config.py  method_config.py  metric_3d_utils.py  rotate_xray_dataparser.py  volume_extraction.py  xray_datamanager.py  xray_field.py  xray_kplanes_field.py  xray_kplanes_model.py  xray_model.py  xray_pipeline.py
